create enum ElementType directory-server
Signed-off-by: maissa SOUISSI <maissa.souissi@rte-france.com>